welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: value lenght is not a member of Array[Int]
  while(nums(i)!= lookingFor && i<nums.lenght)
                                       ^