welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
 	var i=0
  while(nums(i)!= lookingFor && i<nums.lenght)
  {
    i+=1    
  }
  return(i)
}